--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,10 +20,10 @@ jobs:
         run : mvn clean package -Dmaven.test.skip
       - name : set up artifacts
         run : mkdir artifacts && cp test.log target/*.jar artifacts
-      - uses : actions/upload-artifacts@v3
+      - uses : actions/upload-artifact@v3
         with:
           name: Package
           path: artifacts
-           
+
 
     
